k8s/local/2.server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: free-websockets-local
  name: free-websockets-server
  labels:
    app: free-websockets-server
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: free-websockets-server-container
  template:
    metadata:
      namespace: free-websockets-local
      labels:
        pod: free-websockets-server-container
    spec:
      containers:
        - name: free-websockets-server
          image: free-websockets/server_service:local
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
