k8s/local/3.service.yml
kind: Service
apiVersion: v1
metadata:
  namespace: free-websockets-local
  name: server-service
spec:
  selector:
    pod: free-websockets-server-container
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
