k8s/local/5.ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: free-websockets-local
  name: free-websockets-server-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-local"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/websocket-services: free-websockets-server-service
    nginx.org/websocket-services: free-websockets-server-service
spec:
  tls:
    - hosts:
        - localhost
      secretName: echo-tls
  rules:
    - host: localhost
      http:
        paths:
          - path: /free-websockets(/|$)(.*)
            backend:
              serviceName: free-websockets-server-service
              servicePort: 5000
